a11y: Fix omitted first letter when scrolling

https://bugzilla.gnome.org/show_bug.cgi?id=657960